<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Presentation.Activities.HomeActivity"
        android:background="@color/colorBackground">

    <TextView
            android:text="@string/intro_text1"
            android:layout_width="@dimen/intro_text_width"
            android:layout_height="wrap_content" android:id="@+id/introText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold|italic"
            android:textAllCaps="true" android:textColor="@color/colorPrimaryLight" android:textSize="10sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/intro_text2"
            android:layout_height="wrap_content" android:id="@+id/introText2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/introText1" android:layout_width="@dimen/intro_text_width"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
    />
    <Button
            android:text="@string/button_all_relations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/relationsBtn"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/introText2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingLeft="@dimen/relations_button_padding_left_right"
            android:paddingRight="@dimen/relations_button_padding_left_right"
            android:textSize="10sp"/>
    <TextView
            android:text="@string/latest_jottings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/latestJottingsText"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/relationsBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="6dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAllCaps="true" android:textStyle="bold"
            android:textSize="8sp" app:layout_constraintHorizontal_bias="0.05"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/home_latest_jottings_recycler"
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/latestJottingsText"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/addJottingBtn" android:layout_weight="1"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.95" app:backgroundTint="@color/colorComplementary"/>
</android.support.constraint.ConstraintLayout>